--- a/stile.css
+++ b/stile.css
@@ -2,50 +2,79 @@ body{
 	font-family: Arial,Times New Roman, Times;
 	font-size: 14px;
 }
-	
+
 #finestra{
 	margin:auto;
-	display:block;
+	display:block;}
+	 
+#all{
+	width: 500px;
+	height: 300px;
+	position: absolute;
+	/*border: 1px solid black;*/
+	
 }
-#perso{
-	margin: auto;
-	display: block;
+#sopra{
+	width: 450px;
+	height: 200px;
+	border: 1px solid red;
+	margin-top: 1%;
+	margin-left: 1%;
+	 border-radius: 10px; 
+  -moz-border-radius: 10px; /* firefox */
+  -webkit-border-radius: 10px; /* safari, chrome */
 }
+#attuale{
+	width: 190px;
+	height: 190px;
+	border: 1px solid green;
+	float: left;
+	margin-left: 2px;
+	margin-top: 2px;
+}
+#record{
+	width: 190px;
+	height: 190px;
+	border: 1px solid green;
+	float: right;
+	margin-right: 4px;
+	margin-top: 2px;
+}
+h2{
+	display: inline;
+	font-size: 20px;
+}
+
 #playAgain{
-	width: 250px;
-	height: 70px;
+	width: 200px;
+	height: 55px;
 	border: 1px solid black;
 	padding-left: 5px;
 	padding-bottom: 5px;
-	
-	position: absolute;
 	background-color: lightblue;
-	border-radius: 10px; /*bordi arrotondati*/
-	-moz-border-radius: 10px; /* firefox */
-	-webkit-border-radius: 10px; /* safari, chrome */
-}
-h2{
-	display: inline-block;
-	vertical-align: middle; /*allineamento verticale nel mezzo*/
-	padding-left: 3%;
+	margin: auto;
+	margin-top: 6px;
+	 border-radius: 10px; 
+  -moz-border-radius: 10px; /* firefox */
+  -webkit-border-radius: 10px; /* safari, chrome */
 }
 #refresh{
 	vertical-align: middle;
 	
 }
-#sopra{
-	border-radius: 10px; /*bordi arrotondati*/
-	-moz-border-radius: 10px; /* firefox */
-	-webkit-border-radius: 10px; /* safari, chrome */
-	width: 200px;
-	height: 100px;
-	
+#trophy{
+	margin: auto;
+	display: block;
+	margin-top: 3%;
+}
+.punteggio{
+	text-align: center;
 }
 
-#fine{
-	position:absolute;
-	display:block;
-}
+
+
+
+
 
 
 
