--- a/css/stile.css
+++ b/css/stile.css
@@ -15,17 +15,18 @@ body{
 #sopra{
 	width: 250px;
 	height: 180px;
-
 	border-radius: 8px;
-	/*border: 1px solid red;*/
+
 	margin: auto;
 	position: absolute;
 	left: 0;
 	right: 0;
 	top: 0;
-	bottom: 0;
+	bottom: 28%;
 	z-index: 10;
-	background: rgb(130,227,140) url("./img/background.png") center bottom no-repeat;
+	background-image: url("../img/backgroundDiv.png");
+	background-position: center bottom;
+	background-repeat: no-repeat;
 
 }
 #playAgain{
@@ -37,10 +38,10 @@ body{
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: 55%;
+	top: 18%;
 	bottom: 0;
 	z-index: 10;
-	background-color: lightblue;
+	background-color: #1155cc;
 	cursor: pointer;
 }
 #attuale{
@@ -67,6 +68,7 @@ body{
 }
 #rec, #att{
 	text-align: center;
+	font-size: 18px;
 }
 
 #refresh{
@@ -77,4 +79,5 @@ h2{
 	display: inline-block;
 	vertical-align: middle;
 	padding-left: 2%;
+	color: white;
 }
