--- a/css/stile.css
+++ b/css/stile.css
@@ -4,7 +4,7 @@
 body{
 	font-family: Arial,Times New Roman, Times;
 	font-size: 14px;
-	background-color: #f6f6f6;
+	background-color: #686868;
 
 }
 #title{
